--- a/css/style.css
+++ b/css/style.css
@@ -1,34 +1,131 @@
-.col-6 {
-    width: 100%;
-    height: 30vh;
-    background-color: aqua;
-    border: 4px dashed black;
+.but1 {
+    background-color: #FFFFFF;
+    border: 3px solid #E1C0B0;
+    padding: 12px 35px;
+    font-size: 10px;
 }
 
-.col-12 {
-    width: 100%;
-    height: 10vh;
-    background-color: red;
-    border: 3px dashed black;
+.but1:hover {
+    background-color: #E1C0B0;
+}
+
+.but2 {
+    background-color: #D8F0E3;
+    padding: 1rem 4rem;
+    font-size: 10px;
+    border: 0;
+}
+
+.col-6 {
+    background-color: #FFFFFF;
+    position: relative;
+}
+
+.jumbo-photo {
+    width: 16rem;
+}
+
+.leaf1 {
+    position: absolute;
+    top: 2.5rem;
+    left: 4rem;
+}
+
+.leaf2 {
+    position: absolute;
+    top: 13rem;
+    left: 0;
+}
+
+.leaf3 {
+    position: absolute;
+    bottom: 5rem;
+    left: 2rem;
+}
+
+.leaf4 {
+    position: absolute;
+    right: 26%;
+    top: 3%;
+}
+
+.leaf5 {
+    position: absolute;
+    right: 18%;
+    top: 23%;
+}
+
+.leaf6 {
+    position: absolute;
+    bottom: 14%;
+    right: 7%;
 }
 
 .col-4 {
+    position: relative;
     width: 100%;
-    height: 60vh;
-    background-color: green;
-    border: 3px dashed black;
 }
 
-.col-2 {
-    width: 100%;
-    height: 30vh;
-    background-color: peachpuff;
-    border: 3px dashed black;
+.start-0 {
+    background-color: white;
+    position: absolute;
+    line-height: 5px;
+    cursor: pointer;
+    padding: 1.3rem;
+    opacity: 0;
+
 }
 
-.col-3 {
-    width: 100%;
-    height: 30vh;
-    background-color: peachpuff;
-    border: 3px dashed black;
+.col-4:hover .start-0 {
+    opacity: 1;
+}
+
+.col-9 {
+    position: relative;
+}
+
+.line {
+    position: absolute;
+    position: fixed;
+}
+
+.icon {
+    background-color: #FAF7F1;
+    font-size: 2.3rem;
+    color: #BADAC9;
+}
+
+.icon2 {
+    background-color: #FAF7F1;
+    font-size: 2.4rem;
+    color: #F8D12D;
+}
+
+.icon3 {
+    background-color: #FAF7F1;
+    font-size: 2.2rem;
+    color: #80465F;
+}
+
+.icon4 {
+    background-color: #FAF7F1;
+    font-size: 2.2rem;
+    color: #EB6950;
+}
+
+.p2 {
+    font-size: 12px;
+}
+
+.jumbo-2 {
+    background-image: url(../pictures/h-2-background-1.jpg);
+    background-size: cover;
+}
+
+.by {
+    font-size: 10px;
+}
+
+footer {
+    background-color: #C0E1CF;
 }
