--- a/css/style.css
+++ b/css/style.css
@@ -73,10 +73,22 @@
     cursor: pointer;
     padding: 1.3rem;
     opacity: 0;
+}
 
+.shop {
+    width: 6rem;
+    position: absolute;
+    right: -4.5rem;
+    top: 5rem;
+    cursor: pointer;
+    opacity: 0;
 }
 
 .col-4:hover .start-0 {
+    opacity: 1;
+}
+
+.col-4:hover .shop {
     opacity: 1;
 }
 
@@ -126,6 +138,18 @@
     font-size: 10px;
 }
 
-footer {
+.footer {
     background-color: #C0E1CF;
 }
+
+.container {
+    position: relative;
+}
+
+.slider {
+    width: 5px;
+    height: 5px;
+    background-color: #E1C0B0;
+}
+
+/**/
