--- a/css/style.css
+++ b/css/style.css
@@ -27,37 +27,37 @@
 
 .leaf1 {
     position: absolute;
-    top: 2.5rem;
+    top: 0;
     left: 4rem;
 }
 
 .leaf2 {
     position: absolute;
-    top: 13rem;
+    top: 10rem;
     left: 0;
 }
 
 .leaf3 {
     position: absolute;
-    bottom: 5rem;
-    left: 2rem;
+    bottom: 1rem;
+    left: 1.5rem;
 }
 
 .leaf4 {
     position: absolute;
-    right: 26%;
-    top: 3%;
+    right: 12rem;
+    top: -2rem;
 }
 
 .leaf5 {
     position: absolute;
-    right: 18%;
-    top: 23%;
+    right: 9rem;
+    top: 3.5rem;
 }
 
 .leaf6 {
     position: absolute;
-    bottom: 14%;
+    bottom: 1rem;
     right: 7%;
 }
 
@@ -96,9 +96,12 @@
     position: relative;
 }
 
+.col-3 {
+    z-index: 10;
+}
+
 .line {
-    position: absolute;
-    position: fixed;
+    z-index: 10-1;
 }
 
 .icon {
@@ -147,9 +150,17 @@
 }
 
 .slider {
-    width: 5px;
-    height: 5px;
+    width: 8px;
+    height: 8px;
+    margin: 5px;
+    cursor: pointer;
     background-color: #E1C0B0;
 }
 
-/**/
+.slider:hover {
+    scale: 1.4;
+}
+
+.shad:hover {
+    text-shadow: 1px 3px 3px #E1C0B0;
+}
